objects/Account_Affiliate__c.object
<CustomObject>
    <fields>
        <fullName>IPS__c</fullName>
        <description>Current Profile type deployed for this Account</description>
        <label>IPS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Check Point</fullName>
                </value>
                <value>
                    <fullName>Cisco IPS</fullName>
                </value>
                <value>
                    <fullName>DeepNines</fullName>
                </value>
                <value>
                    <fullName>Enterasys</fullName>
                </value>
                <value>
                    <fullName>HP/TippingPoint</fullName>
                </value>
                <value>
                    <fullName>IBM/ISS</fullName>
                </value>
                <value>
                    <fullName>Juniper</fullName>
                </value>
                <value>
                    <fullName>McAfee</fullName>
                </value>
                <value>
                    <fullName>NitroSecurity</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Radware</fullName>
                </value>
                <value>
                    <fullName>Sourcefire</fullName>
                </value>
                <value>
                    <fullName>StillSecure</fullName>
                </value>
                <value>
                    <fullName>Stonesoft</fullName>
                </value>
                <value>
                    <fullName>Top Layer Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identity_Solution_Customer_Satisfaction__c</fullName>
        <description>Provides Customer Satifaction on Security Profile</description>
        <label>Identity Solution Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Happy with solution no need to change</fullName>
                </value>
                <value>
                    <fullName>Would change - cost issue</fullName>
                </value>
                <value>
                    <fullName>Would change - funcational issue</fullName>
                </value>
                <value>
                    <fullName>Would change - other issue</fullName>
                </value>
                <value>
                    <fullName>Would change - perf issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identity_Solution_Renewal_Date__c</fullName>
        <description>Date when Profile service is up for Renewal</description>
        <label>Identity Solution Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Identity_Solution__c</fullName>
        <description>Current Profile type deployed for this Account</description>
        <label>Identity Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Avenda Systema</fullName>
                </value>
                <value>
                    <fullName>Bradford Networks</fullName>
                </value>
                <value>
                    <fullName>Check Point</fullName>
                </value>
                <value>
                    <fullName>Cisco ISE</fullName>
                </value>
                <value>
                    <fullName>Cisco NAC or ACS</fullName>
                </value>
                <value>
                    <fullName>Enterasys</fullName>
                </value>
                <value>
                    <fullName>ForeScout</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>Impulse Point</fullName>
                </value>
                <value>
                    <fullName>InfoExpress</fullName>
                </value>
                <value>
                    <fullName>Juniper</fullName>
                </value>
                <value>
                    <fullName>McAfee</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Nevis Networks</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sophos</fullName>
                </value>
                <value>
                    <fullName>StillSecure</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Trustwave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_MTA__c</fullName>
        <label>Incumbent MTA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActiveState Perl MX</fullName>
                </value>
                <value>
                    <fullName>Baracuda</fullName>
                </value>
                <value>
                    <fullName>Blackspider - Outsourced</fullName>
                </value>
                <value>
                    <fullName>Borderware</fullName>
                </value>
                <value>
                    <fullName>CipherTrust</fullName>
                </value>
                <value>
                    <fullName>Clearswift</fullName>
                </value>
                <value>
                    <fullName>Critical Path</fullName>
                </value>
                <value>
                    <fullName>E-Safe</fullName>
                </value>
                <value>
                    <fullName>Frontbridge-Outsourced</fullName>
                </value>
                <value>
                    <fullName>IronPort</fullName>
                </value>
                <value>
                    <fullName>Mail Frontier</fullName>
                </value>
                <value>
                    <fullName>MailSweeper</fullName>
                </value>
                <value>
                    <fullName>McAfee e500</fullName>
                </value>
                <value>
                    <fullName>Messagelabs-Outsourced</fullName>
                </value>
                <value>
                    <fullName>Mirapoint</fullName>
                </value>
                <value>
                    <fullName>MS Exchange IMS/IIS</fullName>
                </value>
                <value>
                    <fullName>Openwave</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Outsourced</fullName>
                </value>
                <value>
                    <fullName>Post.Office</fullName>
                </value>
                <value>
                    <fullName>PostFix</fullName>
                </value>
                <value>
                    <fullName>Postini-Outsourced</fullName>
                </value>
                <value>
                    <fullName>Proofpoint</fullName>
                </value>
                <value>
                    <fullName>qmail</fullName>
                </value>
                <value>
                    <fullName>Sendmail (SMI)</fullName>
                </value>
                <value>
                    <fullName>Sendmail os</fullName>
                </value>
                <value>
                    <fullName>Sprint - Outsourced</fullName>
                </value>
                <value>
                    <fullName>Sun ONE</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Trend IMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IronPort_Type__c</fullName>
        <label>IronPort Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise - 10,001 or greater users</fullName>
                </value>
                <value>
                    <fullName>Commercial - 5,001 - 10,000 users</fullName>
                </value>
                <value>
                    <fullName>Mid-Market - 2,001 - 5,000 users</fullName>
                </value>
                <value>
                    <fullName>SME - 2.000 or fewer users</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>SLED</fullName>
                </value>
                <value>
                    <fullName>Hosting / ISP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Reseller (VAR)</fullName>
                </value>
                <value>
                    <fullName>Referral Partner</fullName>
                </value>
                <value>
                    <fullName>System Integrator/Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDAP__c</fullName>
        <label>LDAP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
                <value>
                    <fullName>No Plans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <label>Main Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Information__c</fullName>
        <label>Marketing Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Netsuite_Customer_ID__c</fullName>
        <description>Oracle ERP identifier (manually entered) - on creating a new account one gets cust id from sales ops - tie to renewal opps - how to identify?</description>
        <label>Customer ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Branches_Remote_Office__c</fullName>
        <description>Number of branches/remote offices for this customer</description>
        <label>Number of Branches/Remote Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-50</fullName>
                </value>
                <value>
                    <fullName>51-200</fullName>
                </value>
                <value>
                    <fullName>201-500</fullName>
                </value>
                <value>
                    <fullName>501-1000</fullName>
                </value>
                <value>
                    <fullName>1001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Mobile_Workers__c</fullName>
        <description>Number of mobile workers at customer location</description>
        <label>Number of Mobile Workers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-500</fullName>
                </value>
                <value>
                    <fullName>501-1000</fullName>
                </value>
                <value>
                    <fullName>1000-5000</fullName>
                </value>
                <value>
                    <fullName>5000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_PC_Users__c</fullName>
        <description>Number of PC Users at customer location</description>
        <label>Number of PC Users</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>less than 3000</fullName>
                </value>
                <value>
                    <fullName>3001-5000</fullName>
                </value>
                <value>
                    <fullName>5001-10,000</fullName>
                </value>
                <value>
                    <fullName>10001-30000</fullName>
                </value>
                <value>
                    <fullName>30000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_of_SPAM__c</fullName>
        <label>Percent of SPAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <label>Primary Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8e6</fullName>
                </value>
                <value>
                    <fullName>ActiveState</fullName>
                </value>
                <value>
                    <fullName>ActiveState Perl MX</fullName>
                </value>
                <value>
                    <fullName>ActiveState PureMessage</fullName>
                </value>
                <value>
                    <fullName>AhnLab, Inc</fullName>
                </value>
                <value>
                    <fullName>Aladdin</fullName>
                </value>
                <value>
                    <fullName>Astaro</fullName>
                </value>
                <value>
                    <fullName>Barracuda</fullName>
                </value>
                <value>
                    <fullName>Bloxx</fullName>
                </value>
                <value>
                    <fullName>BlueCoat</fullName>
                </value>
                <value>
                    <fullName>Border Ware</fullName>
                </value>
                <value>
                    <fullName>Borderware MX Extreme</fullName>
                </value>
                <value>
                    <fullName>Brightmail</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>Can It Spam</fullName>
                </value>
                <value>
                    <fullName>CipherTrust</fullName>
                </value>
                <value>
                    <fullName>Clam AV</fullName>
                </value>
                <value>
                    <fullName>Cloudmark</fullName>
                </value>
                <value>
                    <fullName>Critical Path</fullName>
                </value>
                <value>
                    <fullName>Cymphonix</fullName>
                </value>
                <value>
                    <fullName>Clearswift</fullName>
                </value>
                <value>
                    <fullName>Content Keeper</fullName>
                </value>
                <value>
                    <fullName>Cybera</fullName>
                </value>
                <value>
                    <fullName>CyberCefcon</fullName>
                </value>
                <value>
                    <fullName>Datacraft</fullName>
                </value>
                <value>
                    <fullName>ESET</fullName>
                </value>
                <value>
                    <fullName>E.piphany</fullName>
                </value>
                <value>
                    <fullName>E-Safe</fullName>
                </value>
                <value>
                    <fullName>FaceTime</fullName>
                </value>
                <value>
                    <fullName>Finjan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Project</fullName>
                </value>
                <value>
                    <fullName>1-3 months</fullName>
                </value>
                <value>
                    <fullName>4-6 months</fullName>
                </value>
                <value>
                    <fullName>7-9 months</fullName>
                </value>
                <value>
                    <fullName>10+ months</fullName>
                </value>
                <value>
                    <fullName>Active Project</fullName>
                </value>
                <value>
                    <fullName>Future project</fullName>
                </value>
                <value>
                    <fullName>Project closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protocol_Account_ID__c</fullName>
        <description>Third Party Marketing Vendor uploading into SFDC</description>
        <inlineHelpText>Third Party Marketing Vendor uploading into SFDC</inlineHelpText>
        <label>Protocol Account ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Rejected__c</fullName>
        <label>Reason Rejected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Too late in project cycle</fullName>
                </value>
                <value>
                    <fullName>Likes incumbent</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>No need / unqualified</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Mil__c</fullName>
        <label>Revenue ($Mil)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Growth__c</fullName>
        <label>Sales Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary_Competitor__c</fullName>
        <label>Secondary Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8e6</fullName>
                </value>
                <value>
                    <fullName>ActiveState</fullName>
                </value>
                <value>
                    <fullName>ActiveState Perl MX</fullName>
                </value>
                <value>
                    <fullName>ActiveState PureMessage</fullName>
                </value>
                <value>
                    <fullName>AhnLab, Inc.</fullName>
                </value>
                <value>
                    <fullName>Aladdin</fullName>
                </value>
                <value>
                    <fullName>Astaro</fullName>
                </value>
                <value>
                    <fullName>Barracuda</fullName>
                </value>
                <value>
                    <fullName>Bloxx</fullName>
                </value>
                <value>
                    <fullName>BlueCoat</fullName>
                </value>
                <value>
                    <fullName>Border Ware</fullName>
                </value>
                <value>
                    <fullName>Borderware MX Extreme</fullName>
                </value>
                <value>
                    <fullName>Brightmail</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>Can It Spam</fullName>
                </value>
                <value>
                    <fullName>CipherTrust</fullName>
                </value>
                <value>
                    <fullName>Clam AV</fullName>
                </value>
                <value>
                    <fullName>Cloudmark</fullName>
                </value>
                <value>
                    <fullName>Critical Path</fullName>
                </value>
                <value>
                    <fullName>Cymphonix</fullName>
                </value>
                <value>
                    <fullName>Clearswift</fullName>
                </value>
                <value>
                    <fullName>Content Keeper</fullName>
                </value>
                <value>
                    <fullName>Cybera</fullName>
                </value>
                <value>
                    <fullName>CyberCefcon</fullName>
                </value>
                <value>
                    <fullName>Datacraft</fullName>
                </value>
                <value>
                    <fullName>ESET</fullName>
                </value>
                <value>
                    <fullName>E.piphany</fullName>
                </value>
                <value>
                    <fullName>E-Safe</fullName>
                </value>
                <value>
                    <fullName>FaceTime</fullName>
                </value>
                <value>
                    <fullName>Finjan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_PSS_Primary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Security PSS user</description>
        <label>Security PSS (Primary)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Affiliates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_PSS_Secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Security PSS user</description>
        <label>Security PSS (Secondary)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Affiliates2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sourcefire_Sales_FY2011_2013__c</fullName>
        <description>Sourcefire Sales FY2011-2013, Retains some of the Sourcefire history for the account</description>
        <label>Sourcefire Sales FY2011-2013</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spyware__c</fullName>
        <label>Spyware</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Coat</fullName>
                </value>
                <value>
                    <fullName>WebSense</fullName>
                </value>
                <value>
                    <fullName>IPrism/St. Bernard</fullName>
                </value>
                <value>
                    <fullName>SurfControl</fullName>
                </value>
                <value>
                    <fullName>Secure Computing</fullName>
                </value>
                <value>
                    <fullName>Barracuda</fullName>
                </value>
                <value>
                    <fullName>McAfee</fullName>
                </value>
                <value>
                    <fullName>8e6</fullName>
                </value>
                <value>
                    <fullName>Mi5</fullName>
                </value>
                <value>
                    <fullName>Proofpoint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unified_Communication_Strategy_Choice__c</fullName>
        <label>Unified Communication Strategy Choice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown at this time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Customer_Satisfaction__c</fullName>
        <description>Provides Customer Satifaction on Security Profile</description>
        <label>VPN Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Happy with solution no need to change</fullName>
                </value>
                <value>
                    <fullName>Would change - cost issue</fullName>
                </value>
                <value>
                    <fullName>Would change - funcational issue</fullName>
                </value>
                <value>
                    <fullName>Would change - other issue</fullName>
                </value>
                <value>
                    <fullName>Would change - perf issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Renewal_Date__c</fullName>
        <description>Date when Profile service is up for Renewal</description>
        <label>VPN Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VPN__c</fullName>
        <description>Current Profile type deployed for this Account</description>
        <label>VPN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AEP Networks</fullName>
                </value>
                <value>
                    <fullName>AppGate</fullName>
                </value>
                <value>
                    <fullName>Array Networks</fullName>
                </value>
                <value>
                    <fullName>Check Point</fullName>
                </value>
                <value>
                    <fullName>Cisco Anyconnect</fullName>
                </value>
                <value>
                    <fullName>Citrix</fullName>
                </value>
                <value>
                    <fullName>F5</fullName>
                </value>
                <value>
                    <fullName>Juniper</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>NeoAccel</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PortWise</fullName>
                </value>
                <value>
                    <fullName>Sanfor Technologies</fullName>
                </value>
                <value>
                    <fullName>SonicWall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Security_1_Customer_Satisfaction__c</fullName>
        <description>Provides Customer Satifaction on Security Profile</description>
        <label>Web Security 1 Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Happy with solution no need to change</fullName>
                </value>
                <value>
                    <fullName>Would change - cost issue</fullName>
                </value>
                <value>
                    <fullName>Would change - funcational issue</fullName>
                </value>
                <value>
                    <fullName>Would change - other issue</fullName>
                </value>
                <value>
                    <fullName>Would change - perf issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Security_1_Renewal_Date__c</fullName>
        <description>Date when Profile service is up for Renewal</description>
        <label>Web Security 1 Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_Security_1__c</fullName>
        <description>Current Profile type deployed for this Account</description>
        <label>Web Security 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Barracuda</fullName>
                </value>
                <value>
                    <fullName>Bluecoat Appliance</fullName>
                </value>
                <value>
                    <fullName>Bluecoat Hosted</fullName>
                </value>
                <value>
                    <fullName>Cisco IronPort</fullName>
                </value>
                <value>
                    <fullName>Cisco ScanSafe</fullName>
                </value>
                <value>
                    <fullName>Clearswift</fullName>
                </value>
                <value>
                    <fullName>ContentKeeper Technologies</fullName>
                </value>
                <value>
                    <fullName>Cymphonix</fullName>
                </value>
                <value>
                    <fullName>FireEye</fullName>
                </value>
                <value>
                    <fullName>Fortinet</fullName>
                </value>
                <value>
                    <fullName>M86 Security</fullName>
                </value>
                <value>
                    <fullName>McAfee</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
                <value>
                    <fullName>Optenet</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Palo Alto</fullName>
                </value>
                <value>
                    <fullName>Phantom Technologies</fullName>
                </value>
                <value>
                    <fullName>SafeNet</fullName>
                </value>
                <value>
                    <fullName>Sangfor Technologies</fullName>
                </value>
                <value>
                    <fullName>Sophos</fullName>
                </value>
                <value>
                    <fullName>Symantec Message Labs</fullName>
                </value>
                <value>
                    <fullName>Symatec Web Gateway</fullName>
                </value>
                <value>
                    <fullName>Trend Micro</fullName>
                </value>
                <value>
                    <fullName>Webroot</fullName>
                </value>
                <value>
                    <fullName>Websense Appliance</fullName>
                </value>
                <value>
                    <fullName>Websense Hosted</fullName>
                </value>
                <value>
                    <fullName>Zscaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Security_2_Customer_Satisfaction__c</fullName>
        <description>Provides Customer Satifaction on Security Profile</description>
        <label>Web Security 2 Customer Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Happy with solution no need to change</fullName>
                </value>
                <value>
                    <fullName>Would change - cost issue</fullName>
                </value>
                <value>
                    <fullName>Would change - funcational issue</fullName>
                </value>
                <value>
                    <fullName>Would change - other issue</fullName>
                </value>
                <value>
                    <fullName>Would change - perf issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>